--- a/src/mydashboard.html
+++ b/src/mydashboard.html
@@ -179,6 +179,23 @@
                         /></svg
                 ></a>
                 <a
+                    href="https://github.com/blnqco/blnq-studio"
+                    title="GitHub"
+                    aria-label="GitHub"
+                >
+                    <svg
+                        fill="currentcolor"
+                        viewbox="0 0 1024 1024"
+                        width="14"
+                        height="14"
+                        xmlns="http://www.w3.org/2000/svg"
+                    >
+                        <path
+                            d="M512 0C229.25 0 0 229.25 0 512c0 226.25 146.688 418.125 350.156 485.812 25.594 4.688 34.938-11.125 34.938-24.625 0-12.188-.469-52.562-.719-95.312C242 908.812 211.906 817.5 211.906 817.5c-23.312-59.125-56.844-74.875-56.844-74.875-46.531-31.75 3.53-31.125 3.53-31.125 51.406 3.562 78.47 52.75 78.47 52.75 45.688 78.25 119.875 55.625 149 42.5 4.654-33 17.904-55.625 32.5-68.375-113.656-12.937-233.218-56.875-233.218-253.063 0-55.938 19.969-101.562 52.656-137.406-5.219-13-22.844-65.094 5.062-135.562 0 0 42.938-13.75 140.812 52.5 40.812-11.406 84.594-17.031 128.125-17.219 43.5.188 87.312 5.875 128.188 17.281 97.688-66.312 140.688-52.5 140.688-52.5 28 70.531 10.375 122.562 5.125 135.5 32.812 35.844 52.625 81.469 52.625 137.406 0 196.688-119.75 240-233.812 252.688 18.438 15.875 34.75 47 34.75 94.75 0 68.438-.688 123.625-.688 140.5 0 13.625 9.312 29.562 35.25 24.562C877.438 930 1024 738.125 1024 512 1024 229.25 794.75 0 512 0z"
+                        />
+                    </svg>
+                </a>
+                <a
                     href="https://twitter.com/blnqco"
                     target="_blank"
                     aria-label="Blnq on Twitter"
@@ -198,23 +215,6 @@
                     </svg>
                 </a>
                 <a
-                    href="https://www.instagram.com/blnqio/"
-                    target="_blank"
-                    rel="noopener"
-                    aria-label="Blnq on Instagram"
-                    title="Blnq on Instagram"
-                    ><svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="14"
-                        height="14"
-                        viewBox="0 0 24 24"
-                        fill="currentcolor"
-                    >
-                        <path
-                            d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zM12 0C8.741 0 8.333.014 7.053.072 2.695.272.273 2.69.073 7.052.014 8.333 0 8.741 0 12c0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98C8.333 23.986 8.741 24 12 24c3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 100 12.324 6.162 6.162 0 000-12.324zM12 16a4 4 0 110-8 4 4 0 010 8zm6.406-11.845a1.44 1.44 0 100 2.881 1.44 1.44 0 000-2.881z"
-                        /></svg
-                ></a>
-                <a
                     href="https://www.linkedin.com/company/blnq-io"
                     target="_blank"
                     aria-label="Blnq on LinkedIn"
@@ -231,30 +231,24 @@
                             d="M19 0H5a5 5 0 00-5 5v14a5 5 0 005 5h14a5 5 0 005-5V5a5 5 0 00-5-5zM8 19H5V8h3v11zM6.5 6.732c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zM20 19h-3v-5.604c0-3.368-4-3.113-4 0V19h-3V8h3v1.765c1.396-2.586 7-2.777 7 2.476V19z"
                         /></svg
                 ></a>
+
                 <a
-                    href="https://blnqio.slack.com/"
-                    target="_blank"
-                    aria-label="Blnq on Slack"
-                    title="Blnq on Slack"
-                    rel="noopener"
-                    ><svg
+                    href="/legal"
+                    title="Legal & Privacy"
+                    aria-label="Legal & Privacy"
+                >
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
                         width="14"
                         height="14"
                         viewBox="0 0 24 24"
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="currentcolor"
                     >
                         <path
-                            d="M5.11 15.135a2.503 2.503 0 01-2.497 2.497 2.503 2.503 0 01-2.497-2.497 2.503 2.503 0 012.497-2.496H5.11v2.496zM6.368 15.135a2.503 2.503 0 012.497-2.496 2.503 2.503 0 012.496 2.496v6.252a2.503 2.503 0 01-2.496 2.497 2.503 2.503 0 01-2.497-2.497v-6.252zM8.865 5.11a2.503 2.503 0 01-2.497-2.497A2.503 2.503 0 018.865.116a2.503 2.503 0 012.496 2.497V5.11H8.865zM8.865 6.368a2.503 2.503 0 012.496 2.497 2.503 2.503 0 01-2.496 2.496H2.613A2.503 2.503 0 01.116 8.865a2.503 2.503 0 012.497-2.497h6.252z"
+                            fill="currentcolor"
+                            d="M21 5c-1.11-.35-2.33-.5-3.5-.5-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5S2.45 4.9 1 6v14.65c0 .25.25.5.5.5.1 0 .15-.05.25-.05C3.1 20.45 5.05 20 6.5 20c1.95 0 4.05.4 5.5 1.5 1.35-.85 3.8-1.5 5.5-1.5 1.65 0 3.35.3 4.75 1.05.1.05.15.05.25.05.25 0 .5-.25.5-.5V6c-.6-.45-1.25-.75-2-1zm0 13.5c-1.1-.35-2.3-.5-3.5-.5-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5 1.2 0 2.4.15 3.5.5v11.5z"
                         />
-                        <path
-                            d="M18.89 8.865a2.503 2.503 0 012.497-2.497 2.503 2.503 0 012.497 2.497 2.503 2.503 0 01-2.497 2.496H18.89V8.865zM17.632 8.865a2.503 2.503 0 01-2.497 2.496 2.503 2.503 0 01-2.496-2.496V2.613A2.503 2.503 0 0115.135.116a2.503 2.503 0 012.497 2.497v6.252z"
-                        />
-                        <path
-                            d="M15.135 18.89a2.503 2.503 0 012.497 2.497 2.503 2.503 0 01-2.497 2.497 2.503 2.503 0 01-2.496-2.497V18.89h2.496zM15.135 17.632a2.503 2.503 0 01-2.496-2.497 2.503 2.503 0 012.496-2.496h6.252a2.503 2.503 0 012.497 2.496 2.503 2.503 0 01-2.497 2.497h-6.252z"
-                        /></svg
-                ></a>
-                <a href="/legal">Legal & Privacy</a>
+                    </svg>
+                </a>
             </div>
         </div>
         <script src="mydashboard.js"></script>
