--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -1,137 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Blnq Studio: Online Prototyping Playground</title>
-        <meta
-            name="description"
-            content="A Collaborative Web Development Platform using HTML, CSS and JavaScript with a focus on Design Systems and Financial Applications using OpenFin and Electron"
-        />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="manifest" href="assets/manifest/web.manifest" />
-        <link
-            type="application/opensearchdescription+xml"
-            rel="search"
-            href="assets/manifest/osdd.xml"
-        />
-        <meta name="mobile-web-app-capable" content="yes" />
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta name="application-name" content="Blnq" />
-        <meta name="apple-mobile-web-app-title" content="Blnq" />
-        <meta name="theme-color" content="#000000" />
-        <meta name="msapplication-navbutton-color" content="#ffd300" />
-        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <meta name="msapplication-starturl" content="/dashboard" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-        />
-        <link
-            rel="icon"
-            sizes="192x192"
-            href="assets/manifest/icon-desktop@192w.png"
-        />
-        <link
-            rel="icon"
-            sizes="512x512"
-            href="assets/manifest/icon-desktop@512w.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="192x192"
-            href="assets/manifest/icon-mobile@192w.png"
-        />
-        <link
-            rel="apple-touch-icon"
-            sizes="512x512"
-            href="assets/manifest/icon-mobile@512w.png"
-        />
 
-        <meta property="og:url" content="https://studio.blnq.io" />
-        <meta property="og:title" content="Blnq Studio" />
-        <meta property="og:type" content="website" />
-        <meta
-            property="og:description"
-            content="A Collaborative Web Development Platform using HTML, CSS and JavaScript with a focus on Design Systems and Financial Applications using OpenFin and Electron"
-        />
+<head>
+    <meta charset="UTF-8" />
+    <title>Blnq Studio: Online Prototyping Playground</title>
+    <meta name="description" content="A Collaborative Web Development Platform using HTML, CSS and JavaScript with a focus on Design Systems and Financial Applications using OpenFin and Electron" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="manifest" href="assets/manifest/web.manifest" />
+    <link type="application/opensearchdescription+xml" rel="search" href="assets/manifest/osdd.xml" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="application-name" content="Blnq" />
+    <meta name="apple-mobile-web-app-title" content="Blnq" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="msapplication-navbutton-color" content="#ffd300" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="msapplication-starturl" content="/dashboard" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="icon" sizes="192x192" href="assets/manifest/icon-desktop@192w.png" />
+    <link rel="icon" sizes="512x512" href="assets/manifest/icon-desktop@512w.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/manifest/icon-mobile@192w.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="assets/manifest/icon-mobile@512w.png" />
 
-        <meta
-            property="og:image"
-            content="https://studio.blnq.io/manifest/icon-mobile@512w.png"
-        />
+    <meta property="og:url" content="https://studio.blnq.io" />
+    <meta property="og:title" content="Blnq Studio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="A Collaborative Web Development Platform using HTML, CSS and JavaScript with a focus on Design Systems and Financial Applications using OpenFin and Electron" />
 
-        <meta name="twitter:card" content="summary" />
-        <meta name="twitter:site" content="@blnqco" />
-        <meta name="twitter:title" content="Blnq Studio" />
-        <meta
-            name="twitter:description"
-            content="A Collaborative Web Development Platform using HTML, CSS and JavaScript with a focus on Design Systems and Financial Applications using OpenFin and Electron"
-        />
-        <meta
-            name="twitter:image"
-            content="https://studio.blnq.io/manifest/icon-mobile@512w.png"
-        />
-        <script type="application/ld+json">
-            {
-                "@context": "https://schema.org",
-                "@type": "Organization",
-                "url": "https://studio.blnq.io",
-                "logo": "https://studio.blnq.io/manifest/icon-desktop@192w.png",
-                "sameAs": [
-                    "https://twitter.com/blnqco",
-                    "https://www.instagram.com/blnqio",
-                    "https://www.linkedin.com/company/blnq-io"
-                ]
-            }
-        </script>
-        <link rel="stylesheet" href="less/blnq.less" />
-    </head>
+    <meta property="og:image" content="https://studio.blnq.io/manifest/icon-mobile@512w.png" />
 
-    <body class="app dash">
-        <div class="app__main">
-            <div class="app__header">
-                <a
-                    href="/"
-                    class="app__logo"
-                    title="Back to Dashboard"
-                    aria-label="Back to Dashboard"
-                >
-                    <div class="back">
-                        <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="24"
-                            height="24"
-                            viewBox="0 0 24 24"
-                            fill="currentcolor"
-                        >
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@blnqco" />
+    <meta name="twitter:title" content="Blnq Studio" />
+    <meta name="twitter:description" content="A Collaborative Web Development Platform using HTML, CSS and JavaScript with a focus on Design Systems and Financial Applications using OpenFin and Electron" />
+    <meta name="twitter:image" content="https://studio.blnq.io/manifest/icon-mobile@512w.png" />
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "url": "https://studio.blnq.io",
+            "logo": "https://studio.blnq.io/manifest/icon-desktop@192w.png",
+            "sameAs": [
+                "https://twitter.com/blnqco",
+                "https://www.instagram.com/blnqio",
+                "https://www.linkedin.com/company/blnq-io"
+            ]
+        }
+    </script>
+    <link rel="stylesheet" href="less/blnq.less" />
+</head>
+
+<body class="app dash">
+    <div class="app__main">
+        <div class="app__header">
+            <a href="/" class="app__logo" title="Back to Dashboard" aria-label="Back to Dashboard">
+                <div class="back">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentcolor">
                             <path
                                 d="M19 8l-4 4h3c0 3.31-2.69 6-6 6-1.01 0-1.97-.25-2.8-.7l-1.46 1.46C8.97 19.54 10.43 20 12 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46C15.03 4.46 13.57 4 12 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6z"
                             />
                         </svg>
-                    </div>
-                    <div class="logo">
-                        <svg width="40" height="19">
+                </div>
+                <div class="logo">
+                    <svg width="40" height="19">
                             <path
                                 d="M7.172 15.456c-1.653 0-2.883-.805-3.452-2.141h-.072v1.982H0V0h3.669v5.788h.072c.568-1.378 1.798-2.184 3.4-2.184 2.842 0 4.485 2.174 4.485 5.926 0 3.742-1.633 5.926-4.454 5.926zM6.05 6.541c-1.282 0-2.108 1.187-2.119 2.99.01 1.823.837 2.978 2.119 2.978 1.292 0 2.118-1.166 2.118-2.979 0-1.813-.837-2.99-2.118-2.99zm6.27 8.772V0h3.598v15.313h-3.599zm4.567 0V3.78h3.535v2.182h.072c.594-1.546 1.742-2.383 3.453-2.383 2.49 0 3.874 1.61 3.874 4.342v7.393h-3.628V8.736c0-1.314-.594-2.097-1.793-2.097-1.168 0-1.875.9-1.875 2.171v6.503h-3.638zM32.9 3.435c1.643 0 2.884.892 3.39 2.188h.072v-2.04H40v15.308h-3.658v-5.715h-.073c-.444 1.232-1.757 2.135-3.42 2.135-2.78 0-4.475-2.252-4.475-5.97 0-3.676 1.715-5.906 4.526-5.906zm1.333 8.923c1.313 0 2.119-1.126 2.119-2.985 0-1.838-.816-2.996-2.119-2.996-1.312 0-2.108 1.158-2.108 2.996 0 1.848.786 2.985 2.108 2.985z"
                                 fill="currentcolor"
                                 fill-rule="evenodd"
                             />
                         </svg>
-                    </div>
-                </a>
-                <a class="btn" id="newButton" href="/e">
-                    <svg width="24" height="24" viewBox="0 0 24 24">
+                </div>
+            </a>
+            <a class="btn" id="newButton" href="/e">
+                <svg width="24" height="24" viewBox="0 0 24 24">
                         <path
                             d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                             fill="currentcolor"
                         />
                     </svg>
 
-                    <span class="hide-mobile inner">New Blnq</span>
-                </a>
-                <div class="flex"></div>
-                <div class="field field--full dash__search">
-                    <label>
+                <span class="hide-mobile inner">New Blnq</span>
+            </a>
+            <div class="flex"></div>
+            <div class="field field--full dash__search">
+                <label>
                         <input
                             type="text"
                             placeholder="Search"
@@ -140,49 +92,45 @@
                             autocomplete="off"
                         />
                     </label>
-                </div>
-                <div id="userDetails">
-                    <button class="btn" id="login">
+            </div>
+            <div id="userDetails">
+                <button class="btn" id="login">
                         Login<span class="hide-mobile">/Sign Up</span>
                     </button>
-                </div>
             </div>
-            <div class="app__body">
-                <div class="dash__banner">
-                    <h1>
-                        <a class="dash__link" href="/e">Start Coding</a>
-                        <div id="bannerWord" class="banner__word">
-                            Breathtaking
-                        </div>
-                        <div id="bannerThing">Things</div>
-                    </h1>
-                    <div id="installButtons" class="install-buttons"></div>
-                </div>
-                <div class="search-holder">
-                    <div class="dash__header">
-                        <h2>Results:</h2>
+        </div>
+        <div class="app__body">
+            <div class="dash__banner">
+                <h1>
+                    <a class="dash__link" href="/e">Start Coding</a>
+                    <div id="bannerWord" class="banner__word">
+                        Breathtaking
                     </div>
-                    <div class="dash__cards" id="searchResults"></div>
-                </div>
-                <div>
-                    <div class="dash__header">
-                        <h2>Most Popular Blnqs</h2>
-                    </div>
-                    <div class="dash__cards dash__cards--top" id="top"></div>
-                </div>
-                <div>
-                    <div class="dash__header">
-                        <h2>Latest 30 Updated</h2>
-                    </div>
-                    <div class="dash__cards" id="latest"></div>
-                </div>
+                    <div id="bannerThing">Things</div>
+                </h1>
+                <div id="installButtons" class="install-buttons"></div>
             </div>
-            <div class="app__footer">
-                <a
-                    href="mailto:info@blnq.co.uk"
-                    title="Email Us"
-                    aria-label="Email Us"
-                    ><svg
+            <div class="search-holder">
+                <div class="dash__header">
+                    <h2>Results:</h2>
+                </div>
+                <div class="dash__cards" id="searchResults"></div>
+            </div>
+            <div>
+                <div class="dash__header">
+                    <h2>Most Popular Blnqs</h2>
+                </div>
+                <div class="dash__cards dash__cards--top" id="top"></div>
+            </div>
+            <div>
+                <div class="dash__header">
+                    <h2>Latest 30 Updated</h2>
+                </div>
+                <div class="dash__cards" id="latest"></div>
+            </div>
+        </div>
+        <div class="app__footer">
+            <a href="mailto:info@blnq.co.uk" title="Email Us" aria-label="Email Us"><svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="14"
                         height="14"
@@ -194,50 +142,22 @@
                         /></svg
                 ></a>
 
-                <a
-                    href="https://github.com/blnqco/blnq-studio"
-                    title="GitHub"
-                    aria-label="GitHub"
-                >
-                    <svg
-                        fill="currentcolor"
-                        viewbox="0 0 1024 1024"
-                        width="14"
-                        height="14"
-                        xmlns="http://www.w3.org/2000/svg"
-                    >
+            <a href="https://github.com/blnqco/blnq-studio" title="GitHub" aria-label="GitHub">
+                <svg fill="currentcolor" viewbox="0 0 1024 1024" width="14" height="14" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M512 0C229.25 0 0 229.25 0 512c0 226.25 146.688 418.125 350.156 485.812 25.594 4.688 34.938-11.125 34.938-24.625 0-12.188-.469-52.562-.719-95.312C242 908.812 211.906 817.5 211.906 817.5c-23.312-59.125-56.844-74.875-56.844-74.875-46.531-31.75 3.53-31.125 3.53-31.125 51.406 3.562 78.47 52.75 78.47 52.75 45.688 78.25 119.875 55.625 149 42.5 4.654-33 17.904-55.625 32.5-68.375-113.656-12.937-233.218-56.875-233.218-253.063 0-55.938 19.969-101.562 52.656-137.406-5.219-13-22.844-65.094 5.062-135.562 0 0 42.938-13.75 140.812 52.5 40.812-11.406 84.594-17.031 128.125-17.219 43.5.188 87.312 5.875 128.188 17.281 97.688-66.312 140.688-52.5 140.688-52.5 28 70.531 10.375 122.562 5.125 135.5 32.812 35.844 52.625 81.469 52.625 137.406 0 196.688-119.75 240-233.812 252.688 18.438 15.875 34.75 47 34.75 94.75 0 68.438-.688 123.625-.688 140.5 0 13.625 9.312 29.562 35.25 24.562C877.438 930 1024 738.125 1024 512 1024 229.25 794.75 0 512 0z"
                         />
                     </svg>
-                </a>
+            </a>
 
-                <a
-                    href="https://twitter.com/blnqco"
-                    target="_blank"
-                    aria-label="Blnq on Twitter"
-                    title="Blnq on Twitter"
-                    rel="noopener"
-                >
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="14"
-                        height="14"
-                        viewBox="0 0 24 24"
-                        fill="currentcolor"
-                    >
+            <a href="https://twitter.com/blnqco" target="_blank" aria-label="Blnq on Twitter" title="Blnq on Twitter" rel="noopener">
+                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="currentcolor">
                         <path
                             d="M24 4.557a9.83 9.83 0 01-2.828.775 4.932 4.932 0 002.165-2.724 9.864 9.864 0 01-3.127 1.195 4.916 4.916 0 00-3.594-1.555c-3.179 0-5.515 2.966-4.797 6.045A13.978 13.978 0 011.671 3.149a4.93 4.93 0 001.523 6.574 4.903 4.903 0 01-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.935 4.935 0 01-2.224.084 4.928 4.928 0 004.6 3.419A9.9 9.9 0 010 19.54a13.94 13.94 0 007.548 2.212c9.142 0 14.307-7.721 13.995-14.646A10.025 10.025 0 0024 4.557z"
                         />
                     </svg>
-                </a>
-                <a
-                    href="https://www.linkedin.com/company/blnq-io"
-                    target="_blank"
-                    aria-label="Blnq on LinkedIn"
-                    title="Blnq on LinkedIn"
-                    rel="noopener"
-                    ><svg
+            </a>
+            <a href="https://www.linkedin.com/company/blnq-io" target="_blank" aria-label="Blnq on LinkedIn" title="Blnq on LinkedIn" rel="noopener"><svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="14"
                         height="14"
@@ -248,25 +168,19 @@
                             d="M19 0H5a5 5 0 00-5 5v14a5 5 0 005 5h14a5 5 0 005-5V5a5 5 0 00-5-5zM8 19H5V8h3v11zM6.5 6.732c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zM20 19h-3v-5.604c0-3.368-4-3.113-4 0V19h-3V8h3v1.765c1.396-2.586 7-2.777 7 2.476V19z"
                         /></svg
                 ></a>
-                <a
-                    href="/legal"
-                    title="Legal & Privacy"
-                    aria-label="Legal & Privacy"
-                >
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="14"
-                        height="14"
-                        viewBox="0 0 24 24"
-                    >
+            <a href="/legal" title="Legal & Privacy" aria-label="Legal & Privacy">
+                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24">
                         <path
                             fill="currentcolor"
                             d="M21 5c-1.11-.35-2.33-.5-3.5-.5-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5S2.45 4.9 1 6v14.65c0 .25.25.5.5.5.1 0 .15-.05.25-.05C3.1 20.45 5.05 20 6.5 20c1.95 0 4.05.4 5.5 1.5 1.35-.85 3.8-1.5 5.5-1.5 1.65 0 3.35.3 4.75 1.05.1.05.15.05.25.05.25 0 .5-.25.5-.5V6c-.6-.45-1.25-.75-2-1zm0 13.5c-1.1-.35-2.3-.5-3.5-.5-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5 1.2 0 2.4.15 3.5.5v11.5z"
                         />
                     </svg>
-                </a>
-            </div>
+            </a>
         </div>
-        <script src="dashboard.js"></script>
-    </body>
+    </div>
+    <script src="dashboard.js"></script>
+    <script data-name="BMC-Widget" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="blnq" data-description="Support me on Buy me a coffee!" data-message="Thank you for using Blnq Studio. You can now buy us a coffee!" data-color="#FFDD00"
+        data-position="Right" data-x_margin="18" data-y_margin="50"></script>
+</body>
+
 </html>
